--- a/index.html
+++ b/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div>
-        <h3>Square 1</h3>
+      <h3>Square 1</h3>
     </div>
     <div>
-        <h3>Square 2</h3>
+      <h3>Square 2</h3>
     </div>
     <div>
-        <h3>Square 3</h3>
+      <h3>Square 3</h3>
     </div>
-
-</body>
-
+    <div>
+      <h3>Square 4ish</h3>
+    </div>
+  </body>
 </html>
