--- a/index.html
+++ b/index.html
@@ -6,16 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
-    <div>
+    <div class="squareOne">
         <h3>Square 1</h3>
     </div>
-    <div>
+    <div class="squareTwo">
         <h3>Square 2</h3>
     </div>
-    <div>
+    <div class="squareThree">
         <h3>Square 3</h3>
     </div>
 
